# AzureClaw

./: .gitattributes  .gitignore  LICENSE  README.md  azure.yaml  config.example.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  change.md
.github/workflows/: bicep-what-if.yml  ci.yml  release.yml
docs/runbooks/: local-gateway.md  observability.md
infra/: main.bicep  parameters.dev.bicepparam
infra/modules/: acr.bicep  aisearch.bicep  appinsights.bicep  containerapps.bicep  contentsafety.bicep  cosmos.bicep  foundry.bicep  keyvault.bicep  servicebus.bicep  storage.bicep
openspec/: config.yaml
openspec/changes/azure-infra-bootstrap/: design.md  proposal.md  tasks.md
openspec/changes/azure-infra-bootstrap/specs/azure-infrastructure/: spec.md
openspec/changes/bootstrap-skeleton/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-skeleton/specs/package-skeleton/: spec.md
openspec/changes/gateway-and-webhooks/: design.md  proposal.md  tasks.md
openspec/changes/gateway-and-webhooks/specs/gateway/: spec.md
openspec/changes/llm-failover-middleware/: design.md  proposal.md  tasks.md
openspec/changes/llm-failover-middleware/specs/failover-client/: spec.md
openspec/changes/llm-failover-middleware/specs/gateway/: spec.md
openspec/changes/llm-failover-middleware/specs/keyvault-resolver/: spec.md
openspec/changes/llm-failover-middleware/specs/llm-providers/: spec.md
openspec/changes/llm-failover-middleware/specs/observability/: spec.md
openspec/changes/magentic-research-team/: design.md  proposal.md  tasks.md
openspec/changes/magentic-research-team/specs/research-team/: spec.md
openspec/changes/observability-appinsights/: design.md  proposal.md  tasks.md
openspec/changes/observability-appinsights/specs/observability/: spec.md
openspec/changes/repo-init/: design.md  proposal.md  tasks.md
openspec/changes/repo-init/specs/repository-foundation/: spec.md
openspec/changes/triage-and-typed-routing/: design.md  proposal.md  tasks.md
openspec/changes/triage-and-typed-routing/specs/intent-routing/: spec.md
src/azureclaw/: __init__.py  _version.py  config.py  observability.py
src/azureclaw/adapters/: __init__.py  base.py  inproc_test_adapter.py
src/azureclaw/azure/: __init__.py  credential.py  keyvault.py
src/azureclaw/gateway/: __init__.py  app.py  envelope.py  hub.py  routes.py
src/azureclaw/llm/: __init__.py  client_factory.py  failover.py
src/azureclaw/orchestrator/: __init__.py  chat.py  intents.py  orchestrator.py  research_team.py  services.py  stubs.py  triage.py
tests/: conftest.py  test_config_loads.py  test_credential_local_stub.py  test_envelope.py  test_failover_client.py  test_gateway_app.py  test_hub.py  test_inproc_adapter.py  test_intents.py  test_keyvault_resolver.py  test_llm_factory.py  test_observability.py  test_orchestrator.py  test_package.py  test_research_team.py
